--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,13 @@
 			<artifactId>stripe-java</artifactId>
 			<version>28.4.0</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.5.0</version> <!-- Hoặc phiên bản mới nhất -->
+		</dependency>
+
 	</dependencies>
 
 	<build>
